examples/bad/NoVar2.tn
{
  int x = 0;
  :
  print x;
};
print x;
